# capstone_detector

./: .gitignore  CMakeLists.txt  README.md  identify.c  quirc.c  quirc.h
test/: capstone_detector_test.c  capstone_img.h
